# ant-colony

./: .gitignore  CMakeLists.txt  ant.cpp  colony.cpp  game_manager.cpp  main.cpp  rng_engine.cpp  world.cpp
include/: ant.h  colony.h  config.h  direction.h  game_manager.h  rng_engine.h  utils.h  world.h
